@@ -79,6 +79,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Referer "https://vulture-nginx:8000";
             proxy_connect_timeout 5;
+            proxy_read_timeout 300;
             proxy_pass https://unix:/var/sockets/gui/gunicorn.sock;
         }
 
